# neuroimage_denoiser

./: .gitignore  .readthedocs.yaml  CITATION.cff  LICENSE  README.md  denoise.py  grid_trainconfig.yaml  inference.ipynb  prepare_trainfiles.py  pyproject.toml  requirements.txt  search_trainfiles.py  simulate_synapse.ipynb  start_training.py  train.ipynb  trainconfig.yaml  trainfiles.json
deep-iglu-denoiser/: denoise.py  prepare_trainfiles.py  pyproject.toml  start_training.py  trainconfig.yaml
deep-iglu-denoiser/model/: modelwrapper.py  train.py  unet.py
deep-iglu-denoiser/utils/: copy_folder_structure.py  dataloader.py  normalization.py  open_file.py  plot.py
deep_iglu_denoiser/: __main__.py  denoise.py  filter_h5.py  prepare_trainfiles.py  start_training.py  train.py
deep_iglu_denoiser/model/: denoise.py  gridsearch_train.py  modelparts.py  modelwrapper.py  train.py
deep_iglu_denoiser/utils/: activitymap.py  copy_folder_structure.py  dataloader.py  evaluate_model.py  normalization.py  open_file.py  plot.py  trainfiles.py  write_file.py
docs/: conf.py  index.rst
graphics/: correlation_analysis.jp2
model/: modelparts.py  modelwrapper.py  train.py  unet.py
neuroimage_denoiser/: __main__.py  denoise.py  filter_h5.py  train.py
neuroimage_denoiser/model/: denoise.py  gridsearch_train.py  modelparts.py  modelwrapper.py  train.py  unet.py
neuroimage_denoiser/utils/: activitymap.py  convert.py  copy_folder_structure.py  dataloader.py  (+8 more)
utils/: activitymap.py  convert_to_numpy.py  dataloader.py  normalization.py  open_file.py  plot.py  trainfiles.py
