[tool.poetry]
name = "neuroimage_denoiser"
version = "0.1.0"
description = ""
authors = ["Stephan Weißbach <s.weissbach@uni-mainz.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.1"
pandas = "^2.1.1"
scipy = "^1.11.3"
torch = "^2.1.1"
torchaudio = "^2.1.1"
torchvision = "^0.16.1"
tqdm = "^4.65.0"
alive-progress = "^3.1.5"
h5py = "^3.10.0"
tifffile = "^2023.4.12"
nd2 = "^0.8.1"



[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"